# embedcache

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/embedcache-core/: Cargo.toml  README.md
crates/embedcache-core/src/: lib.rs
crates/embedcache-py/: Cargo.toml
crates/embedcache-py/src/: lib.rs
python/embedcache/: __init__.py  _native.pyi
tests/python/: conftest.py  test_embedcache.py
